--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,43 +10,125 @@
     <%= javascript_importmap_tags %>
   </head>
 
-  <body>
-    <nav class="navbar navbar-expand-lg bg-light">
-      <div class="container-fluid">
-        <a class="navbar-brand" href="#">"狂吃不胖"外卖小站</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-            <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="#">首页</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">购物车</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">个人中心</a>
-            </li>
-          </ul>
-          <div class="ml-5">
-            <form class="d-flex" role="search">
-              <input class="form-control me-2" type="search" placeholder="搜索感兴趣的商品" aria-label="Search">
-              <button class="btn btn-outline-success" type="submit">Search</button>
-            </form>
+  <% if user_signed_in? %>
+    <% if current_user.role == 1 %>
+      <body>
+        <nav class="navbar navbar-expand-lg bg-light">
+          <div class="container-fluid">
+            <a class="navbar-brand" href="#">"狂吃不胖"外卖小站</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+              <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+              <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                <li class="nav-item">
+                  <a class="nav-link active" aria-current="page" href="#">首页</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="#">订单管理</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="#">评论管理</a>
+                </li>
+              </ul>
+              <div class="ml-5">
+                <form class="d-flex" role="search">
+                  <input class="form-control me-2" type="search" placeholder="搜索感兴趣的商品" aria-label="Search">
+                  <button class="btn btn-outline-success" type="submit">Search</button>
+                </form>
+              </div>
+            </div>
+            
+            <div style="margin-left: 20px; margin-right: 20px; text-decoration: none !important;">
+              <%= link_to destroy_user_session_path, method: :delete do %>
+                <button class="btn btn-outline-dark" type="submit">退出</button>
+              <% end %>
+            </div>
           </div>
-        </div>
-        
-        <div style="margin-left: 20px; margin-right: 20px; text-decoration: none !important;">
-          <%= link_to destroy_user_session_path, method: :delete do %>
-            <button class="btn btn-outline-dark" type="submit">退出</button>
-          <% end %>
-        </div>
-      </div>
-    </nav>
-
-
-    <%= yield %>
-
-  </body>
+        </nav>
+        <%= yield %>
+      </body>
+    <% elsif current_user.role == 2 %>
+      <body>
+        <nav class="navbar navbar-expand-lg bg-light">
+          <div class="container-fluid">
+            <a class="navbar-brand" href="#">"狂吃不胖"外卖小站</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+              <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+              <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                <li class="nav-item">
+                  <a class="nav-link active" aria-current="page" href="#">首页</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="#">商品管理</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="#">订单管理</a>
+                </li>
+              </ul>
+              <div class="ml-5">
+              </div>
+            </div>
+            <div style="margin-left: 20px; margin-right: 20px; text-decoration: none !important;">
+              <%= link_to destroy_user_session_path, method: :delete do %>
+                <button class="btn btn-outline-dark" type="submit">退出</button>
+              <% end %>
+            </div>
+          </div>
+        </nav>
+        <%= yield %>
+      </body>
+    <% elsif current_user.role == 3 %>
+      <body>
+        <nav class="navbar navbar-expand-lg bg-light">
+          <div class="container-fluid">
+            <a class="navbar-brand" href="#">"狂吃不胖"外卖小站</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+              <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+              <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                <li class="nav-item">
+                  <a class="nav-link active" aria-current="page" href="#">首页</a>
+                </li>
+              </ul>
+              <div class="ml-5">
+              </div>
+            </div>
+            <div style="margin-left: 20px; margin-right: 20px; text-decoration: none !important;">
+              <%= link_to destroy_user_session_path, method: :delete do %>
+                <button class="btn btn-outline-dark" type="submit">退出</button>
+              <% end %>
+            </div>
+          </div>
+        </nav>
+        <%= yield %>
+      </body>
+    <% end %>
+  <% else %>
+    <body>
+        <nav class="navbar navbar-expand-lg bg-light">
+          <div class="container-fluid">
+            <a class="navbar-brand" href="#">"狂吃不胖"外卖小站</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+              <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+              <ul class="navbar-nav me-auto mb-2 mb-lg-0">  
+              </ul>
+              <div class="ml-5">
+              </div>
+            </div>
+            <div style="margin-left: 20px; margin-right: 20px; text-decoration: none !important;">
+              <%= link_to new_user_session_path, method: :delete do %>
+                <button class="btn btn-outline-dark" type="submit">登录</button>
+              <% end %>
+            </div>
+          </div>
+        </nav>
+        <%= yield %>
+      </body>
+  <% end %>
 <html>
