--- a/app/views/sellers/index.html.erb
+++ b/app/views/sellers/index.html.erb
@@ -6,7 +6,7 @@
 
 <div class="row">
   
-  <div class="col-sm-1">
+  <div class="col-sm-1 mx-4">
     <button type="button" class="btn btn-primary" style="width: 6rem;">
       基本信息 
     </button>
@@ -62,7 +62,7 @@
 <div style="height:30px"> </div>
 
 <div class="row">
-  <div class="col-sm-1">
+  <div class="col-sm-1 mx-4">
     <button type="button" class="btn btn-primary" style="width: 6rem;">
       热销商品
     </button>
@@ -70,7 +70,7 @@
 
   <div class="col-sm-2">
     <div style="height:50px"> </div>
-    <div class="card" style="width: 12rem;">
+    <div class="card" style="width: 13rem;">
       <div class="row">
         <div class="col-sm-4">
           <img src="..." class="card-img-top" alt="...">
@@ -91,7 +91,7 @@
 
   <div class="col-sm-2">
     <div style="height:50px"> </div>
-    <div class="card" style="width: 12rem;">
+    <div class="card" style="width: 13rem;">
       <div class="row">
         <div class="col-sm-4">
           <img src="..." class="card-img-top" alt="...">
@@ -112,7 +112,7 @@
 
   <div class="col-sm-2">
     <div style="height:50px"> </div>
-    <div class="card" style="width: 12rem;">
+    <div class="card" style="width: 13rem;">
       <div class="row">
         <div class="col-sm-4">
           <img src="..." class="card-img-top" alt="...">
@@ -133,7 +133,7 @@
 
   <div class="col-sm-2">
     <div style="height:50px"> </div>
-    <div class="card" style="width: 12rem;">
+    <div class="card" style="width: 13rem;">
       <div class="row">
         <div class="col-sm-4">
           <img src="..." class="card-img-top" alt="...">
@@ -154,7 +154,7 @@
 
   <div class="col-sm-2">
     <div style="height:50px"> </div>
-    <div class="card" style="width: 12rem;">
+    <div class="card" style="width: 13rem;">
       <div class="row">
         <div class="col-sm-4">
           <img src="..." class="card-img-top" alt="...">
