add support for upload image

--- a/app/views/users/registrations/new.html.erb
+++ b/app/views/users/registrations/new.html.erb
@@ -62,7 +62,7 @@
             <%= user_profile_form.text_field :address, autofocus: false, placeholder:"第三红岸基地" %>
            <div style="height:10px"> </div>
             <%= user_profile_form.label "logo：    " %>
-            <%= user_profile_form.file_field :photo, accept: 'image/png,image/jpeg'%>
+            <%= user_profile_form.file_field :image, accept: 'image/png,image/jpeg'%>
         <% end %>
         </div>
          <div id="register3" style="display:none">
