--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,13 +22,19 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
               <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                 <li class="nav-item">
-                  <a class="nav-link active" aria-current="page" href="#">首页</a>
+                  <%= link_to new_buyer_path, method: :get do %>
+                    <button type="button" class="btn btn-light">首页</button>
+                  <% end %>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="#">订单管理</a>
+                  <%= link_to new_seller_path, method: :get do %>
+                    <button type="button" class="btn btn-light">订单管理</button>
+                  <% end %>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="#">评论管理</a>
+                  <%= link_to new_order_path, method: :get do %>
+                    <button type="button" class="btn btn-light">评论管理</button>
+                  <% end %>
                 </li>
               </ul>
               <div class="ml-5">
@@ -59,13 +65,19 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
               <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                 <li class="nav-item">
-                  <a class="nav-link active" aria-current="page" href="#">首页</a>
+                  <%= link_to seller_path(2), method: :get do %>
+                    <button type="button" class="btn btn-light">首页</button>
+                  <% end %>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="#">商品管理</a>
+                  <%= link_to new_seller_path, method: :get do %>
+                    <button type="button" class="btn btn-light">商品管理</button>
+                  <% end %>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="#">订单管理</a>
+                  <%= link_to new_order_path, method: :get do %>
+                    <button type="button" class="btn btn-light">订单管理</button>
+                  <% end %>
                 </li>
               </ul>
               <div class="ml-5">
