--- a/app/views/buyers/index.html.erb
+++ b/app/views/buyers/index.html.erb
@@ -1,153 +1,439 @@
-<p style="color: green"><%= notice %></p>
+<% content_for :head do %>
+  <%= javascript_import_module_tag "custom/buyer_change" %>
+<% end %>
+<div style="height:20px"> </div>
 
-<h1><span class="badge badge-secondary">推荐商铺</span></h1>
+<nav>
+  <div class="nav nav-tabs" id="nav-tab" role="tablist">
+    <button class="nav-link active" id="nav-home-tab" data-bs-toggle="tab" data-bs-target="#nav-home" type="button" role="tab" aria-controls="nav-home" aria-selected="true">店铺主页</button>
+    <button class="nav-link" id="nav-profile-tab" data-bs-toggle="tab" data-bs-target="#nav-profile" type="button" role="tab" aria-controls="nav-profile" aria-selected="false">商品</button>
+    <button class="nav-link" id="nav-contact-tab" data-bs-toggle="tab" data-bs-target="#nav-contact" type="button" role="tab" aria-controls="nav-contact" aria-selected="false">评论</button>
+    <button class="nav-link" id="nav-collect-tab" data-bs-toggle="tab" data-bs-target="#nav-collect" type="button" role="tab" aria-controls="nav-collect" aria-selected="false">购物车</button>
+  </div>
+</nav>
 
 <div style="height:20px"> </div>
 
-<div class="row">
-  
-  <div class="col-sm-4 mx=5">
-    <div style="height:10px"> </div>
-    <div class="card" style="width: 24rem;">
-      <div class="row">
-        <div class="col-sm-4">
-          <img src="..." class="card-img-top" alt="...">
+<div class="tab-content" id="nav-tabContent">
+  <div class="tab-pane fade show active" id="nav-home" role="tabpanel" aria-labelledby="nav-home-tab" tabindex="0">
+    <div class="row">
+      <div class="col-sm-1 mx-4">
+        <button type="button" class="btn btn-primary" style="width: 6rem;">
+          基本信息 
+        </button>
+      </div>
+      <div class="col-sm-3">
+        <div style="height:50px"> </div>
+        <div class="card" style="width: 18rem;">
+          <div class="row">
+            <div class="col-sm-4">
+              <img src="..." class="card-img-top" alt="...">
+            </div>
+            <div class="col-sm-8">
+              <div style="height:10px"> </div>
+              <div class="card-body">
+                <h5 class="card-title">喜茶(乐山路店)</h5>
+              </div>
+            </div>
+          </div>
+          <ul class="list-group list-group-flush">
+            <li class="list-group-item">电话号码: 18811320635</li>
+            <li class="list-group-item">地址: 南京市建邺区碧瑶花园</li>
+            <li class="list-group-item">店铺描述: 一家非常好喝的奶茶店!</li>
+          </ul>
         </div>
-        <div class="col-sm-1">
-        </div>
-        <div class="col-sm-7">
-          <div style="height:10px"> </div>
+      </div>
+      <div class="col-sm-1">
+        <button type="button" class="btn btn-primary" style="width: 6rem;">
+          数据统计
+        </button>
+      </div>
+      <div class="col-sm-3">
+        <div style="height:50px"> </div>
+        <div class="card">
           <div class="card-body">
-            <h4 class="card-title">喜茶(乐山路店)</h4>
+            <h5 class="card-title">月份销量统计图</h5>
+            <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+            <a href="#" class="btn btn-primary">Go somewhere</a>
           </div>
         </div>
       </div>
-      <ul class="list-group list-group-flush">
-        <li class="list-group-item">店铺描述: 一家非常好喝的奶茶店!</li>
-        <li class="list-group-item">
-          <h5>
-            推荐商品
-          </h5>
-          <div style="height:10px"> </div>
-          <div class="row">
-            <div class="col-sm-4">
-              <div>
-                <img src="..." class="card-img-top" alt="...">
-              </div>
-              <div>多肉葡萄</div>
-            </div>
-            <div class="col-sm-4">
-              <div>
-                <img src="..." class="card-img-top" alt="...">
-              </div>
-              <div>多肉青提</div>
-            </div>
-            <div class="col-sm-4">
-              <div>
-                  <img src="..." class="card-img-top" alt="...">
-                </div>
-              <div>多肉莓莓</div>
-            </div>
-          </div>
-        </li>
-      </ul>
-    </div>
-  </div>
-
-  <div class="col-sm-4 mx=5">
-    <div style="height:10px"> </div>
-    <div class="card" style="width: 24rem;">
-      <div class="row">
-        <div class="col-sm-4">
-          <img src="..." class="card-img-top" alt="...">
-        </div>
-        <div class="col-sm-1">
-        </div>
-        <div class="col-sm-7">
-          <div style="height:10px"> </div>
+      <div class="col-sm-3">
+        <div style="height:50px"> </div>
+        <div class="card">
           <div class="card-body">
-            <h4 class="card-title">喜茶(乐山路店)</h4>
+            <h5 class="card-title">月份收入统计图</h5>
+            <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+            <a href="#" class="btn btn-primary">Go somewhere</a>
           </div>
         </div>
       </div>
-      <ul class="list-group list-group-flush">
-        <li class="list-group-item">店铺描述: 一家非常好喝的奶茶店!</li>
-        <li class="list-group-item">
-          <h5>
-            推荐商品
-          </h5>
-          <div style="height:10px"> </div>
+    </div>
+
+    <div style="height:30px"> </div>
+
+    <div class="row">
+      <div class="col-sm-1 mx-4">
+        <button type="button" class="btn btn-primary" style="width: 6rem;">
+          热销商品
+        </button>
+      </div>
+
+      <div class="col-sm-2">
+        <div style="height:50px"> </div>
+        <div class="card" style="width: 13rem;">
           <div class="row">
             <div class="col-sm-4">
-              <div>
-                <img src="..." class="card-img-top" alt="...">
-              </div>
-              <div>多肉葡萄</div>
+              <img src="..." class="card-img-top" alt="...">
             </div>
-            <div class="col-sm-4">
-              <div>
-                <img src="..." class="card-img-top" alt="...">
+            <div class="col-sm-8">
+              <div style="height:10px"> </div>
+              <div class="card-body">
+                <h5 class="card-title">多肉葡萄</h5>
               </div>
-              <div>多肉青提</div>
-            </div>
-            <div class="col-sm-4">
-              <div>
-                  <img src="..." class="card-img-top" alt="...">
-                </div>
-              <div>多肉莓莓</div>
             </div>
           </div>
-        </li>
-      </ul>
+          <ul class="list-group list-group-flush">
+            <li class="list-group-item">价格: 28RMB/杯</li>
+            <li class="list-group-item">销量: 323/月</li>
+          </ul>
+        </div>
+      </div>
+
+      <div class="col-sm-2">
+        <div style="height:50px"> </div>
+        <div class="card" style="width: 13rem;">
+          <div class="row">
+            <div class="col-sm-4">
+              <img src="..." class="card-img-top" alt="...">
+            </div>
+            <div class="col-sm-8">
+              <div style="height:10px"> </div>
+              <div class="card-body">
+                <h5 class="card-title">多肉葡萄</h5>
+              </div>
+            </div>
+          </div>
+          <ul class="list-group list-group-flush">
+            <li class="list-group-item">价格: 28RMB/杯</li>
+            <li class="list-group-item">销量: 323/月</li>
+          </ul>
+        </div>
+      </div>
+
+      <div class="col-sm-2">
+        <div style="height:50px"> </div>
+        <div class="card" style="width: 13rem;">
+          <div class="row">
+            <div class="col-sm-4">
+              <img src="..." class="card-img-top" alt="...">
+            </div>
+            <div class="col-sm-8">
+              <div style="height:10px"> </div>
+              <div class="card-body">
+                <h5 class="card-title">多肉葡萄</h5>
+              </div>
+            </div>
+          </div>
+          <ul class="list-group list-group-flush">
+            <li class="list-group-item">价格: 28RMB/杯</li>
+            <li class="list-group-item">销量: 323/月</li>
+          </ul>
+        </div>
+      </div>
+
+      <div class="col-sm-2">
+        <div style="height:50px"> </div>
+        <div class="card" style="width: 13rem;">
+          <div class="row">
+            <div class="col-sm-4">
+              <img src="..." class="card-img-top" alt="...">
+            </div>
+            <div class="col-sm-8">
+              <div style="height:10px"> </div>
+              <div class="card-body">
+                <h5 class="card-title">多肉葡萄</h5>
+              </div>
+            </div>
+          </div>
+          <ul class="list-group list-group-flush">
+            <li class="list-group-item">价格: 28RMB/杯</li>
+            <li class="list-group-item">销量: 323/月</li>
+          </ul>
+        </div>
+      </div>
+
+      <div class="col-sm-2">
+        <div style="height:50px"> </div>
+        <div class="card" style="width: 13rem;">
+          <div class="row">
+            <div class="col-sm-4">
+              <img src="..." class="card-img-top" alt="...">
+            </div>
+            <div class="col-sm-8">
+              <div style="height:10px"> </div>
+              <div class="card-body">
+                <h5 class="card-title">多肉葡萄</h5>
+              </div>
+            </div>
+          </div>
+          <ul class="list-group list-group-flush">
+            <li class="list-group-item">价格: 28RMB/杯</li>
+            <li class="list-group-item">销量: 323/月</li>
+          </ul>
+        </div>
+      </div>
+
     </div>
   </div>
+  <div class="tab-pane fade" id="nav-profile" role="tabpanel" aria-labelledby="nav-profile-tab" tabindex="0">
+    <div class="row">
+      <div class="col-sm-3">
+        <div style="height:50px"> </div>
+        <div class="card" style="width: 18rem;">
+          <div class="row">
+            <div class="col-sm-4">
+              <img src="..." class="card-img-top" alt="...">
+            </div>
+            <div class="col-sm-2">
+            </div>
+            <div class="col-sm-6">
+              <div style="height:10px"> </div>
+              <div class="card-body">
+                <h5 class="card-title">多肉葡萄</h5>
+              </div>
+            </div>
+          </div>
+          <ul class="list-group list-group-flush">
+            <li class="list-group-item">价格: 28RMB/杯</li>
+            <li class="list-group-item">销量: 323/月</li>
+            <li class="list-group-item">商品描述: 本店销量冠军</li>
+            <li class="list-group-item">
+              <div class="row">
+                <div class="col-sm-8">
+                </div>
+                <div class="col-sm-4">
+                  <button type="button" class="btn btn-primary" style="width: 4rem;">
+                    添加
+                  </button>
+                </div>
+              </div>
+            </li>
+          </ul>
+        </div>
+      </div>
+      <div class="col-sm-3">
+        <div style="height:50px"> </div>
+        <div class="card" style="width: 18rem;">
+          <div class="row">
+            <div class="col-sm-4">
+              <img src="..." class="card-img-top" alt="...">
+            </div>
+            <div class="col-sm-2">
+            </div>
+            <div class="col-sm-6">
+              <div style="height:10px"> </div>
+              <div class="card-body">
+                <h5 class="card-title">多肉葡萄</h5>
+              </div>
+            </div>
+          </div>
+          <ul class="list-group list-group-flush">
+            <li class="list-group-item">价格: 28RMB/杯</li>
+            <li class="list-group-item">销量: 323/月</li>
+            <li class="list-group-item">商品描述: 本店销量冠军</li>
+            <li class="list-group-item">
+              <div class="row">
+                <div class="col-sm-8">
+                </div>
+                <div class="col-sm-4">
+                  <button type="button" class="btn btn-primary" style="width: 4rem;">
+                    添加
+                  </button>
+                </div>
+              </div>
+            </li>
+          </ul>
+        </div>
+      </div>
+      <div class="col-sm-3">
+        <div style="height:50px"> </div>
+        <div class="card" style="width: 18rem;">
+          <div class="row">
+            <div class="col-sm-4">
+              <img src="..." class="card-img-top" alt="...">
+            </div>
+            <div class="col-sm-2">
+            </div>
+            <div class="col-sm-6">
+              <div style="height:10px"> </div>
+              <div class="card-body">
+                <h5 class="card-title">多肉葡萄</h5>
+              </div>
+            </div>
+          </div>
+          <ul class="list-group list-group-flush">
+            <li class="list-group-item">价格: 28RMB/杯</li>
+            <li class="list-group-item">销量: 323/月</li>
+            <li class="list-group-item">商品描述: 本店销量冠军</li>
+            <li class="list-group-item">
+              <div class="row">
+                <div class="col-sm-8">
+                </div>
+                <div class="col-sm-4">
+                  <button type="button" class="btn btn-primary" style="width: 4rem;">
+                    添加
+                  </button>
+                </div>
+              </div>
+            </li>
+          </ul>
+        </div>
+      </div>
+      <div class="col-sm-3">
+        <div style="height:50px"> </div>
+        <div class="card" style="width: 18rem;">
+          <div class="row">
+            <div class="col-sm-4">
+              <img src="..." class="card-img-top" alt="...">
+            </div>
+            <div class="col-sm-2">
+            </div>
+            <div class="col-sm-6">
+              <div style="height:10px"> </div>
+              <div class="card-body">
+                <h5 class="card-title">多肉葡萄</h5>
+              </div>
+            </div>
+          </div>
+          <ul class="list-group list-group-flush">
+            <li class="list-group-item">价格: 28RMB/杯</li>
+            <li class="list-group-item">销量: 323/月</li>
+            <li class="list-group-item">商品描述: 本店销量冠军</li>
+            <li class="list-group-item">
+              <div class="row">
+                <div class="col-sm-8">
+                </div>
+                <div class="col-sm-4">
+                  <button type="button" class="btn btn-primary" style="width: 4rem;">
+                    添加
+                  </button>
+                </div>
+              </div>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="tab-pane fade" id="nav-contact" role="tabpanel" aria-labelledby="nav-contact-tab" tabindex="0">
+    <div style="height:20px"> </div>
+    <div class="row">
 
-  <div class="col-sm-4 mx=5">
-    <div style="height:10px"> </div>
-    <div class="card" style="width: 24rem;">
-      <div class="row">
-        <div class="col-sm-4">
-          <img src="..." class="card-img-top" alt="...">
-        </div>
-        <div class="col-sm-1">
-        </div>
-        <div class="col-sm-7">
-          <div style="height:10px"> </div>
+      <div class="col-1">
+        
+      </div>
+
+      <div class="col-3">
+        <div class="card">
           <div class="card-body">
-            <h4 class="card-title">喜茶(乐山路店)</h4>
+            <h5 class="card-title">买家评论</h5>
+            <h6 class="card-title">用户:zhy</h6>
+            <p class="card-text">这家店的多肉葡萄超级无敌好喝！</p>
+            <p class="card-text">2023.1.4</p>
           </div>
         </div>
       </div>
-      <ul class="list-group list-group-flush">
-        <li class="list-group-item">店铺描述: 一家非常好喝的奶茶店!</li>
-        <li class="list-group-item">
-          <h5>
-            推荐商品
-          </h5>
-          <div style="height:10px"> </div>
-          <div class="row">
-            <div class="col-sm-4">
-              <div>
-                <img src="..." class="card-img-top" alt="...">
-              </div>
-              <div>多肉葡萄</div>
-            </div>
-            <div class="col-sm-4">
-              <div>
-                <img src="..." class="card-img-top" alt="...">
-              </div>
-              <div>多肉青提</div>
-            </div>
-            <div class="col-sm-4">
-              <div>
-                  <img src="..." class="card-img-top" alt="...">
-                </div>
-              <div>多肉莓莓</div>
-            </div>
+
+      <div class="col-3">
+        <div class="card">
+          <div class="card-body">
+            <h5 class="card-title">买家评论</h5>
+            <h6 class="card-title">用户:zhy</h6>
+            <p class="card-text">这家店的多肉葡萄超级无敌好喝！</p>
+            <p class="card-text">2023.1.4</p>
           </div>
-        </li>
-      </ul>
+        </div>
+      </div>
+
+      <div class="col-3">
+        <div class="card">
+          <div class="card-body">
+            <h5 class="card-title">买家评论</h5>
+            <h6 class="card-title">用户:zhy</h6>
+            <p class="card-text">这家店的多肉葡萄超级无敌好喝！</p>
+            <p class="card-text">2023.1.4</p>
+          </div>
+        </div>
+      </div>
+
     </div>
   </div>
+  <div class="tab-pane fade" id="nav-collect" role="tabpanel" aria-labelledby="nav-collect-tab" tabindex="0">
+    <div style="min-width: 800px">
+      <div class="container d-flex flex-column justify-content-center my-5"
+        style="border: 3px solid black; border-radius: 30px; width: 800px;">
+        <div style="display: flex; flex-direction: column; justify-content: center; align-items: center;">
+          <h2 class="my-4">购物车</h2>
 
+          <ul class="list-group list-group-flush" style="width:80%">
+            <li class="list-group-item">
+              <div class="row">
+                <div class="col-sm-5">
+                  商品名称: 多肉葡萄
+                </div>
+                <div class="col-sm-3">
+                  商品数量: 2
+                </div>
+                <div class="col-sm-4">
+                  价格: 56RMB
+                </div>
+              </div>
+              <div style="height:10px"> </div>
+              <div class="row">
+                <div class="col-sm-5">
+                  商品名称: 多肉青提
+                </div>
+                <div class="col-sm-3">
+                  商品数量: 2
+                </div>
+                <div class="col-sm-4">
+                  价格: 58RMB
+                </div>
+              </div>
+              <div style="height:10px"> </div>
+              <div class="row">
+                <div class="col-sm-5">
+                  商品名称: 多肉莓莓
+                </div>
+                <div class="col-sm-3">
+                  商品数量: 2
+                </div>
+                <div class="col-sm-4">
+                  价格: 64RMB
+                </div>
+              </div>
+            </li>
+            <li class="list-group-item">店铺名称: 喜茶（乐山路店）</li>
+            <li class="list-group-item">
+              <div class="row">
+                <div class="col-sm-5">
+                  <div style="height:5px"> </div>
+                  总价: 178RMB
+                </div>
+                <div class="col-sm-3">
+                  
+                </div>
+                <div class="col-sm-4">
+                  <button type="button" class="btn btn-primary" style="width: 4rem;">
+                    下单
+                  </button>
+                </div>
+              </div>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </div>
+  </div>
 </div>
