--- a/app/views/items/_form.html.erb
+++ b/app/views/items/_form.html.erb
@@ -10,33 +10,34 @@
       </ul>
     </div>
   <% end %>
+<div class="form-group">
+            <%= form.label :name, style: "display: block" %>
+            <%= form.text_field :name ,:placeholder=>"点击此处，输入商品名称",:class=>"form-control"%>
+          </div>
 
-  <div>
-    <%= form.label :name, style: "display: block" %>
-    <%= form.text_field :name %>
-  </div>
+          <div class="form-group">
+            <%= form.label :price, style: "display: block" %>
+            <%= form.text_field :price,:placeholder=>"点击此处，输入商品价格",:class=>"form-control"%>
+          </div>
 
-  <div>
-    <%= form.label :price, style: "display: block" %>
-    <%= form.text_field :price %>
-  </div>
-
-  <div>
-    <%= form.label :image, style: "display: block" %>
-    <%= form.text_field :image %>
-  </div>
-
-  <div>
-    <%= form.label :content, style: "display: block" %>
-    <%= form.text_area :content %>
-  </div>
-
-  <div>
-    <%= form.label :store_id, style: "display: block" %>
-    <%= form.text_field :store_id %>
-  </div>
-
-  <div>
-    <%= form.submit %>
-  </div>
+          <div class="form-group">
+            <%= form.label :content, style: "display: block" %>
+            <%= form.text_area :content ,:placeholder=>"点击此处，输入商品描述",:class=>"form-control"%>
+          </div>
+          <div class="row">
+            <div class="col-sm-7">
+                <div class="form-group">
+                  <%= form.label "logo：    " %>
+                  <div style="height:5px"> </div>
+                  <%= form.file_field :image, accept: 'image/png,image/jpeg'%>
+                </div>
+            </div>
+            <div class="col-sm-2">
+            </div>
+            
+            <div class="col-sm-2">
+              <div style="height:20px"> </div>
+              <%= form.submit "确认提交", :class => "btn btn-primary" ,:style=>"width: 100px"%>
+            </div>
+          </div>
 <% end %>
