--- a/app/views/items/new.html.erb
+++ b/app/views/items/new.html.erb
@@ -20,41 +20,7 @@
         style="border: 1px solid black; border-radius: 20px;">
         <div style="display: flex; flex-direction: column; justify-content: center; align-items: center;">
         <div class="m-4" style="display: flex; flex-direction: column;">
-
-          <div class="form-group">
-            <label for="inputAddress">商品名称</label>
-            <input type="text" class="form-control" id="inputAddress" placeholder="点击此处，输入商品名称">
-          </div>
-
-          <div class="form-group">
-            <label for="inputAddress2">商品价格</label>
-            <input type="text" class="form-control" id="inputAddress2" placeholder="点击此处，输入商品价格">
-          </div>
-
-          <div class="form-group">
-            <label for="exampleFormControlTextarea1">商品描述</label>
-            <textarea class="form-control" id="exampleFormControlTextarea1" rows="3" placeholder="点击此处，添加商品描述"></textarea>
-          </div>
-
-          <div class="row">
-            
-            <div class="col-sm-7">
-              <form>
-                <div class="form-group">
-                  <label for="exampleFormControlFile1">上传商品图片</label>
-                  <div style="height:5px"> </div>
-                  <input type="file" class="form-control-file" id="exampleFormControlFile1">
-                </div>
-              </form>
-            </div>
-            <div class="col-sm-2">
-            </div>
-            
-            <div class="col-sm-2">
-              <div style="height:20px"> </div>
-              <button type="submit" class="btn btn-primary" style="width: 100px">确认添加</button>
-            </div>
-          </div>
+          <%= render "form", item: @item %>
         </div>
       </div>
     </div>
@@ -63,13 +29,3 @@
 </div>
 
 
-
-<script type="text/javascript">
-var enableTable=function() {
-$('#myTab button').on('click', function (event) {
-  event.preventDefault()
-  $(this).tab('show')
-})
-};
-enableTable();
-</script>
