--- a/app/views/sellers/index.html.erb
+++ b/app/views/sellers/index.html.erb
@@ -4,7 +4,7 @@
 
 <div style="height:20px"> </div>
 
-<% @this_seller = Seller.find_by(id: @seller_user_id)%>
+<% @this_seller = Seller.find_by(user_id: current_user.id)%>
 
 <div class="row">
   
@@ -18,7 +18,10 @@
     <div class="card" style="width: 18rem;">
       <div class="row">
         <div class="col-sm-4">
-          <img src="..." class="card-img-top" alt="...">
+          <%# <% if @this_seller.image.attached? %> 
+            <img src="<%= (url_for(@this_seller.image)) %>" class="card-img-top" alt="..."> 
+          <%# <% end %> 
+          <%# <img src="..." class="card-img-top" alt="..."> %>
         </div>
         <div class="col-sm-8">
           <div style="height:10px"> </div>
@@ -28,7 +31,7 @@
         </div>
       </div>
       <ul class="list-group list-group-flush">
-        <li class="list-group-item">地址: 南京市建邺区碧瑶花园</li>
+        <li class="list-group-item">地址: <%= @this_seller.address %></li>
         <li class="list-group-item">店铺描述: 一家非常好喝的奶茶店!</li>
       </ul>
     </div>
